--- a/Mossalji/Mossalji.Data/Mossalji.Data.csproj
+++ b/Mossalji/Mossalji.Data/Mossalji.Data.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Enums\FinanicalStatus.cs" />
     <Compile Include="Enums\OrderStatus.cs" />
     <Compile Include="Enums\PaymentMethod.cs" />
+    <Compile Include="ExtensionMethod\ExtensionMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
