--- a/Mossalji/Mossalji.Data/packages.config
+++ b/Mossalji/Mossalji.Data/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="EntityFramework.SqlServerCompact" version="6.2.0" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net472" />
 </packages>
