--- a/Mossalji/Mossalji.WPF/packages.config
+++ b/Mossalji/Mossalji.WPF/packages.config
@@ -5,4 +5,5 @@
   <package id="MaterialDesignColors" version="1.2.0" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net472" />
+  <package id="Microsoft.Windows.Shell" version="3.0.1.0" targetFramework="net472" />
 </packages>
